** Fixed the spherical bessel function gsl_sf_bessel_jl_e) to limit
the use of gsl_sf_bessel_Jnu_asympx_e to the range x>100*l*l to
satisfy he requirement x>>l*l in the asymptotic expansion.

** The scaled bessel function gsl_sf_bessel_In_scaled now handles
larger arguments x > 1e7 correctly for n < 150 using the uniform
asymptotic expansion instead of the continued fraction expansion.

** The functions gsl_stats_min/max now return NaN if the data contains
NaN. Similarly, the functions gsl_stats_min/max_index return the index
of the first occurring NaN in the data when it contains a NaN.

** Fixed an invalid memory access that caused incorrect results for
the special case in periodic cubic spline interpolation of 3 points.

** Added Debye functions for n=5 and n=6

** Added the missing functions gsl_spline_name() and
gsl_spline_min_size()

** The function gsl_rng_uniform_int(r,n) now returns an error for n=0,
which can occur when passing an unsigned integer value of 2^32.

* What was new in gsl-1.7:

** Switched gsl_randist_binomial to use the faster binomial random
variate TPE algorithm by default.  The previous binomial variate
algorithm is available as gsl_randist_binomial_knuth.  This will
result in a different sequence of binomial variates in programs using
this function.

** Improved the algorithm for gsl_sf_elljac_e to avoid cancellation
errors near quarter periods.

** Fixed the branch selection in gsl_sf_gamma_inc_Q_e to avoid
inaccurate results for large a,x where x~=~a.

** The multilinear fitting functions now have forms which accept a
user-specified tolerance for the SVD cutoff and return the
corresponding effective rank of the design matrix.

** The quadratic solvers in poly/ now handle linear equations
gracefully (i.e. quadratrics with a leading coefficient of zero).

** The output of "make check" now only shows test failures by default,
to reduce the amount of output.  Set the environment variable